<?xml version="1.0"?>
<package format="2">
  <name>joystick_msgs</name>
  <version>1.0.0</version>
  <description>Joystick Messages</description>
  <license>MIT</license>
  <maintainer email="cornelius.voneinem@mavt.ethz.ch">Cornelius von Einem</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>

</package>
